[package]
name = "paw-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono", "macros"]}
dotenv = "0.15.0"
chrono = "0.4.38"
env_logger = "0.11.3"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }